# vrchat_autoban

./: .gitignore  LICENSE  README.md  mypi.ini  pyproject.toml  renovate.json
.trunk/: trunk.yaml
src/vrchat_autoban/: __init__.py  config-example.json  config.py  constants.py  deduplicate_ids.py  main.py  settings.toml
src/vrchat_autoban/api/: authenticator.py  moderator.py  user_moderator.py  vrchat_api.py
src/vrchat_autoban/data/: json_user_loader.py  processed_user_tracker.py  user_loader.py
src/vrchat_autoban/models/: ban_status.py  user.py  user_block_status.py
src/vrchat_autoban/utils/: file_handler.py  interfaces.py  rate_limiter.py  session_manager.py
