[project]
name = "vrchat-autoban"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "vrchatapi==1.18.8",
    "loguru==0.7.3",
    "tqdm==4.67.1",
    "pendulum==3.0.0",
    "pydantic==2.10.5",
    "aiofiles==24.1.0",
    "dynaconf==3.2.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy==1.14.1",
    "types-requests==2.32.0.20241016",
    "pylint==3.3.3",
    "autopep8==2.3.1",
    "black==24.10.0",
    "pylance==0.21.0",
    "pyright==1.1.388",
    "flake8==7.1.1",
    "types-tqdm==4.67.0.20241221",
    "pandas-stubs==2.2.3.241126",
    "mypy-extensions==1.0.0",
    "types-aiofiles==24.1.0.20240626",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vrchat_autoban"]
