[project]
name = "vrchat-autoban"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "vrchatapi==1.19.2",
    "loguru==0.7.3",
    "tqdm==4.67.1",
    "pendulum==3.0.0",
    "pydantic==2.11.4",
    "aiofiles==24.1.0",
    "dynaconf==3.2.11",
    "platformdirs>=4.3.8",
]
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "types-requests==2.32.0.20250515",
    "pylint==3.3.7",
    "autopep8==2.3.2",
    "black==25.1.0",
    "pylance==0.26.1",
    "pyright==1.1.400",
    "flake8==7.2.0",
    "types-tqdm==4.67.0.20250516",
    "pandas-stubs==2.2.3.250308",
    "mypy-extensions==1.1.0",
    "types-aiofiles==24.1.0.20250326",
]

[tool.mypy]
python_version = "3.12" # Specify your Python version

check_untyped_defs = true

[[tool.mypy.overrides]]
module = "dynaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vrchatapi.*"
ignore_missing_imports = true

[tool.flake8]
# other flake8 configurations
extend-ignore = [
    "E203",
    "E704",
    "W503",
]